[package]
name = "rocket-boost"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
handlebars = "6"
rocket = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tide-jsx = { git = "https://github.com/democai/tide-jsx.git" }
once_cell = "1"
log = "*"
tokio = { version = "1.34.0", features = ["sync"] }